# minimal-vimacs-web-demo

./: Cargo.toml  README.md
assets/: script.js  style.css
src/: main.rs  routes.rs
src/app/: mod.rs  state.rs
src/app/controllers/: home.rs
src/app/views/: components.rs  layouts.rs
