[package]
name = "minimal-vimacs-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
axum = "0.8.1"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"

maud = { version = "0.27.0", features = ["axum"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-livereload = "0.9.6"
chrono = "0.4.40"
