[package]
name = "minimal-vimacs-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Backend
tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
shuttle-axum = "0.54.0"
shuttle-runtime = "0.54.0"
reqwest = "0.12.15"

# Utils
chrono = "0.4.41"
base64 = "0.22.1"
serde_json = "1.0.140"

# Frontend
maud = { version = "0.27.0", features = ["axum"] }
tower-http = { version = "0.6.2", features = ["auth", "fs"] }
tower-livereload = "0.9.6"
